--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -68,6 +70,8 @@
 
 @layer base {
   * {
+    font-family: "Inter", sans-serif;
+
     @apply border-border;
   }
   body {
